--- a/Main.html
+++ b/Main.html
@@ -11,27 +11,26 @@
   <h1> Colegio San Juan De Letran-Calamba</h1>
   <p><b>LEARN.LEAD.LIVE</b></p>
 </div>
-
+<nav>
 <div class="navbar">
   <ul>
   <li><a href="#" >Home</a></li> 
-   <div class = "sub-menu-1">
-         <ul>
-          <li><a href="#" >SEAS</a></li>
-          <li><a href="#" >ABM</a></li>
-          <li><a href="#" >SEA</a></li>
-          <li><a href="#" >SCST</a></li>
-          <li><a href="#" >STHM</a></li>
-          <li><a href="#" >SN</a></li>
-         </ul>
-  </div></li>
+  <div class = "sub-menu-1">
+    <ul>
+     <li><a href="#" >SEAS</a></li>
+     <li><a href="#" >ABM</a></li>
+     <li><a href="#" >SEA</a></li>
+     <li><a href="#" >SCST</a></li>
+     <li><a href="#" >STHM</a></li>
+     <li><a href="#" >SN</a></li>
+    </ul>
   <li><a href="#">Academics</a></li>
   <li><a href="#">Career Oppurtuinities</a></li>
   <li><a href="#">Library </a><li>  
   <li><a href="#" class="right">Inquries</a></li>
   </Ul>
 </div>
-
+</nav>
 <div class="row">
   <div class="side">
     <h2>About US</h2>
