--- a/Main.html
+++ b/Main.html
@@ -8,6 +8,73 @@
 <body>
     <link href ="assets.css/style.css" rel ="stylesheet"/>
 <div class="header">
+  <!-- Slideshow container -->
+<div class="slideshow-container">
+
+  <!-- Full-width images with number and caption text -->
+  <div class="mySlides fade">
+    <div class="numbertext">1 / 3</div>
+    <img src="QMD.jpg" style="width:100%">
+    <div class="text">Caption Text</div>
+  </div>
+
+  <div class="mySlides fade">
+    <div class="numbertext">2 / 3</div>
+    <img src="MKD.jpg" style="width:100%">
+    <div class="text">Caption Two</div>
+  </div>
+
+  <div class="mySlides fade">
+    <div class="numbertext">3 / 3</div>
+    <img src="yeet.jpg.png" style="width:100%">
+    <div class="text">Caption Three</div>
+  </div>
+
+  <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div>
+<br>
+
+<!-- The dots/circles -->
+<div style="text-align:center">
+  <span class="dot" onclick="currentSlide(1)"></span>
+  <span class="dot" onclick="currentSlide(2)"></span>
+  <span class="dot" onclick="currentSlide(3)"></span>
+</div>
+
+
+<script>
+  var slideIndex = 1;
+  showSlides(slideIndex);
+  
+  function plusSlides(n) {
+    showSlides(slideIndex += n);
+  }
+  
+  function currentSlide(n) {
+    showSlides(slideIndex = n);
+  }
+  
+  function showSlides(n) {
+    var i;
+    var slides = document.getElementsByClassName("mySlides");
+    var dots = document.getElementsByClassName("dot");
+    if (n > slides.length) {slideIndex = 1}    
+    if (n < 1) {slideIndex = slides.length}
+    for (i = 0; i < slides.length; i++) {
+        slides[i].style.display = "none";  
+    }
+    for (i = 0; i < dots.length; i++) {
+        dots[i].className = dots[i].className.replace(" active", "");
+    }
+    slides[slideIndex-1].style.display = "block";  
+    dots[slideIndex-1].className += " active";
+  }
+  </script>
+  
+
+
   <h1> Colegio San Juan De Letran-Calamba</h1>
   <p><b>LEARN.LEAD.LIVE</b></p>
 </div>
@@ -15,15 +82,6 @@
 <div class="navbar">
   <ul>
   <li><a href="#" >Home</a></li> 
-  <div class = "sub-menu-1">
-    <ul>
-     <li><a href="#" >SEAS</a></li>
-     <li><a href="#" >ABM</a></li>
-     <li><a href="#" >SEA</a></li>
-     <li><a href="#" >SCST</a></li>
-     <li><a href="#" >STHM</a></li>
-     <li><a href="#" >SN</a></li>
-    </ul>
   <li><a href="#">Academics</a></li>
   <li><a href="#">Career Oppurtuinities</a></li>
   <li><a href="#">Library </a><li>  
