--- a/Main.html
+++ b/Main.html
@@ -13,7 +13,7 @@
   
  
   .slideshow-container {
-    max-width: 1000px;
+    max-width: 5000px;
     position: relative;
     margin: auto;
   }
@@ -75,6 +75,10 @@
     <img src="yeet.jpg.png" style="width:100%">
   </div>
 
+  <div class="mySlides fade">
+    <img src="ad.jfif" style="width:100%">
+  </div>
+
   
   <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
   <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -86,6 +90,7 @@
   <span class="dot" onclick="currentSlide(1)"></span>
   <span class="dot" onclick="currentSlide(2)"></span>
   <span class="dot" onclick="currentSlide(3)"></span>
+  <span class="dot" onclick="currentSlide(4)"></span>
 </div>
 
 
