updates for main website
header 1 font change

--- a/Main.html
+++ b/Main.html
@@ -124,7 +124,7 @@ function showSlides(n) {
 </script>
 
   <h1> Colegio San Juan De Letran-Calamba</h1>
-  <p><b>LEARN.LEAD.LIVE</b></p>
+  <p><b class="motto">LEARN.LEAD.LIVE</b></p>
 </div>
 <nav>
 <div class="navbar">
