--- a/Academics.html
+++ b/Academics.html
@@ -11,7 +11,7 @@
 <nav>
 <div class="navbar">
   <ul>
-  <li><a href="#" >Home</a></li> 
+  <li><a href="home" >Home</a></li> 
   <li><a href="Academics.html">Academics</a></li>
   <li><a href="#">Career Oppurtuinities</a></li>
   <li><a href="#">Library </a><li>  
