--- a/CourseOffer.html
+++ b/CourseOffer.html
@@ -10,16 +10,28 @@
     <link href ="assets.css/style.css" rel ="stylesheet"/>
     <div class="navbar">
       <ul>
-        <img src ="logoLetran.png" width="50" height="50">
       <li><a href="Index.html" >Home</a></li> 
       <li><a href="Academics.html">Academics</a></li>
       <li><a href="Aboutus.html">About Us</a></li>
-      <li><a href="#">Courses Offered  </a><li>  
+      <li><a href="CourseOffer.html">Courses Offered  </a><li>  
       <li><a href="#" class="right">Inquries</a></li>
       </Ul>
     </div>
-</body>
-  <div class="article">
+<div class="row">
+  <div class="sideline">
+    <h2>About US</h2>
+    <h5>Photo of Letran:</h5>
+    <img src= "aboutlink.jpg" width="380" height="100" >
+    <p>Colegio de San Juan de Letran Calamba was established on March 11, 1979 in Barangay Bucal, Calamba City, Laguna, in an 11-ha rolling site at the foot of Mt. Makiling.
+      <br> On August 7, 1986, Letran Calamba was granted autonomy by its mother institution (Letran Intramuros) with Rev. Fr. Tamerlane Lana, O.P. as its first Rector and President.</p>
+    <a href="#">More info... </a>
+  
+    <h3>Departments</h3>
+    <img src= "BED.jpg" width="400" height="60" >
+    <img src= "SHS.jpg" width="400" height="60" >
+    <img src= "GSPSe.jpg" width="400" height="60" >
+  </div>
+  <div class="main">
     <h2>News </h2>
     <h5>Letran Basketball , Nov 19 ,2019 </h5>
     <img src= "ncaa_2019.png" width="900" height="200" >
