--- a/Academics.html
+++ b/Academics.html
@@ -10,7 +10,8 @@
     <link href ="assets.css/style.css" rel ="stylesheet"/>
     <div class="navbar">
       <ul>
-      <li><a href="Index.html" >Home</a></li> 
+        <img src ="logoLetran.png" width="50" height="50">
+        <li><a href="Index.html" >Home </a></li> 
       <li><a href="Academics.html">Academics</a></li>
       <li><a href="Aboutus.html">About Us</a></li>
       <li><a href="#">Courses Offered  </a><li>  
