--- a/Index.html
+++ b/Index.html
@@ -125,6 +125,7 @@ function showSlides() {
 
 <div class="navbar">
   <ul>
+    <img src ="logoLetran.png" width="50" height="50">
   <li><a href="Index.html" >Home</a></li> 
   <li><a href="Academics.html">Academics</a></li>
   <li><a href="Aboutus.html">About Us</a></li>
