--- a/Index.html
+++ b/Index.html
@@ -130,7 +130,6 @@ function showSlides() {
   <li><a href="Academics.html">Academics</a></li>
   <li><a href="Aboutus.html">About Us</a></li>
   <li><a href="#">Courses Offered  </a><li>  
-  <li><a href="#" class="right">Inquries</a></li>
   </Ul>
 </div>
 
@@ -178,7 +177,7 @@ function showSlides() {
       COLEGIO DE SAN JUAN DE LETRAN KNIGHTS ARE YOUR NCAA SEASON 95 MEN’S BASKETBALL CHAMPIONS!<br> 
       They won against the fierce San Beda Red Lions with a score of 79 to 81, Kudos Red Lions for an amazing season! 
       What a great way to celebrate our 399th Founding Anniversary. See you next year as we host the NCAA Season 96! </p>
-   
+      <hr style="height:2px;border-width:10px;color:gray;background-color:gray">
     <br>
     <h2>Award for Excilence </h2>
     <h5>Letran Calamba, Nov 21, 2016</h5>
