--- a/CourseOffer.html
+++ b/CourseOffer.html
@@ -10,11 +10,11 @@
     <link href ="assets.css/style.css" rel ="stylesheet"/>
     <div class="navbar">
       <ul>
+        <img src ="logoLetran.png" width="50" height="50">
       <li><a href="Index.html" >Home</a></li> 
       <li><a href="Academics.html">Academics</a></li>
       <li><a href="Aboutus.html">About Us</a></li>
       <li><a href="CourseOffer.html">Courses Offered  </a><li>  
-      <li><a href="#" class="right">Inquries</a></li>
       </Ul>
     </div>
 <div class="row">
