--- a/Index.html
+++ b/Index.html
@@ -6,12 +6,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <style>
+
+
  * {box-sizing: border-box;}
-  body {font-family: Verdana, sans-serif;}
   .mySlides {display:none ;}
   img {vertical-align: middle;}
   
- 
   .slideshow-container {
     max-width: 5000px;
     position: relative;
@@ -49,8 +49,9 @@
   }
   
   @media only screen and (max-width: 300px) {
-    .text {font-size: 11px}
+  .text {font-size: 11px}
   }
+ 
   </style>
 <body>
     <link href ="assets.css/style.css" rel ="stylesheet"/>
@@ -120,7 +121,7 @@ function showSlides() {
 </script>
        <img src="logoLetran.png" width ="100" height="100">
   <h1> Colegio San Juan De Letran-Calamba</h1>
-  <p><b>LEARN.LEAD.LIVE</b></p>
+   <h5>LEARN.LEAD.LIVE</h5>
 </div>
 
 <div class="navbar">
@@ -129,7 +130,7 @@ function showSlides() {
   <li><a href="Index.html" >Home</a></li> 
   <li><a href="Academics.html">Academics</a></li>
   <li><a href="Aboutus.html">About Us</a></li>
-  <li><a href="#">Courses Offered  </a><li>  
+  <li><a href="CourseOffer.html">Courses Offered  </a><li>  
   </Ul>
 </div>
 
@@ -138,7 +139,9 @@ function showSlides() {
     <h2>About US</h2>
     <h5>Photo of Letran:</h5>
     <img src= "aboutlink.jpg" width="380" height="100" >
-    <p>Colegio de San Juan de Letran Calamba was established on March 11, 1979 in Barangay Bucal, Calamba City, Laguna, in an 11-ha rolling site at the foot of Mt. Makiling. On August 7, 1986, Letran Calamba was granted autonomy by its mother institution (Letran Intramuros) with Rev. Fr. Tamerlane Lana, O.P. as its first Rector and President.</p>
+    <p>Colegio de San Juan de Letran Calamba was established on March 11, 1979 in Barangay Bucal, Calamba City, Laguna, 
+      in an 11-ha rolling site at the foot of Mt. Makiling.<br>
+      On August 7, 1986, Letran Calamba was granted autonomy by its mother institution (Letran Intramuros) with Rev. Fr. Tamerlane Lana, O.P. as its first Rector and President.</p>
     <a href="Aboutus.html">More info... </a>
   
     <h3>Departments</h3>
