--- a/Aboutus.html
+++ b/Aboutus.html
@@ -21,24 +21,18 @@
 <div class="row">
   <div class="side">
     <h2>About US</h2>
-
+    <img src="knight.jpg" width ="100" height = "100">
     <img src = "logoLetran.png" width="100" height="100">
-    &nbsp;
-    &nbsp;
-    &nbsp;
-    &nbsp;
-    &nbsp;
+    
     <div class="dropdown">
-      <button class="dropbtn">Student portal </button>
+      <button class="dropbtn">Quick Portal</button>
       <div class="dropdown-content">
-        <a href="#"> </a>
-        <a href="#">Knighmail</a>
-        <a href="#">Educere</a>
+        <a href="https://docs.google.com/forms/d/12v3oecbdbiPLLPXYaAEKHZqJodsUwMDLs9IgYybFz1c/viewform?edit_requested=true">CLIENT stisfactory survey </a>
+        <a href="https://accounts.google.com/AccountChooser/signinchooser?hd=letran-calamba.edu.ph&continue=https%3A%2F%2Fmail.google.com%2Fa%2Fletran-calamba.edu.ph%2F&service=mail&ss=1&ltmpl=default&flowName=GlifWebSignIn&flowEntry=AccountChooser">Email</a>
+        <a href="https://letrancalamba-sisportal.com/#no-back-button">SIS Portal</a>
       </div>
     </div>
     &nbsp;
-
-
     <div class="dropdown">
       <button class="dropbtn">Student portal </button>
       <div class="dropdown-content">
@@ -47,6 +41,25 @@
         <a href="https://letrancalamba.educere.com.ph/">Educere</a>
       </div>
     </div>
+    <h5>For inquiries, you may call</h5>
+        <p>Landline:(049) 545-5453</p>
+        <h5>Admissions and Scholarship Office:</h5>
+          <p>Local 2038/2039</p>
+          <h5>Registrar's Department:</h5>
+           <p>Local 2052/2069</p> 
+        <h5>School of Business,Management and Accountancy:</h5>
+           <p>Local 2024</p>
+           <h5>School of Computer,Science and Technology:</h5>
+           <p>Local 2027</p>
+        <h5> School of Engineering and Architecture:</h5>
+          <p>Local 2030</p>
+          <h5>School of Educatuion,Arts and Sciences:</h5>
+          <p>Local 2018</p>
+          <h5>School of Nursing:</h5>
+           <p>Local 2036</p>
+           <h5>School of Tourism and Hospitality Management:</h5>
+          <p>Local 2053</p>
+
       
   </div>
   <div class="main">
