--- a/Index.html
+++ b/Index.html
@@ -54,6 +54,12 @@
  
   </style>
 <body>
+  <div class="vwrap"><div class="vmove">
+    <div class="vitem">LETRAN CALAMBA ARRIBA</div>
+    <div class="vitem">ANOUNCEMENT</div>
+    <div class="vitem">ENROLLMENT FOR 2ND SEM IS AVAILABLE </div>
+    <div class="vitem">COVID-19 MASS VACCINE IS AVAILABLE IN LETRAN-CALAMBA </div>
+  </div></div>
     <link href ="assets.css/style.css" rel ="stylesheet"/>
 <div class="header">
 
@@ -136,24 +142,31 @@ function showSlides() {
 
 <div class="row">
   <div class="side">
-    <h2>About US</h2>
-    <h5>Photo of Letran:</h5>
-    <img src= "aboutlink.jpg" width="380" height="100" >
-    <p>Colegio de San Juan de Letran Calamba was established on March 11, 1979 in Barangay Bucal, Calamba City, Laguna, 
-      in an 11-ha rolling site at the foot of Mt. Makiling.<br>
-      On August 7, 1986, Letran Calamba was granted autonomy by its mother institution (Letran Intramuros) with Rev. Fr. Tamerlane Lana, O.P. as its first Rector and President.</p>
-    <a href="Aboutus.html">More info... </a>
-  
-    <h3>Departments</h3>
-    <img src= "BED.jpg" width="400" height="60" >
-    <img src= "SHS.jpg" width="400" height="60" >
-    <img src= "GSPSe.jpg" width="400" height="60" >
+    <h3>Department Schedule</h3>
+        <h5>BED OFFICE </h5>
+          <p>Monday to Friday</p>
+           <p>8:00 AM - 5:00 PM</p> 
+        <h5> SHS OFFICE </h5>
+           <p>Monday to Friday</p>
+           <p>8:00 AM - 5:00 PM </p>
+            
+        <h5> GSPSe OFFICE </h5>
+          <p>Monday to Friday</p>
+          <p>9:00 AM - 6:00 PM</p>
+           <p>Satruday</p>
+          <p>8:00 AM - 5:00 PM</p>
 
     <h3>Video of Letran Calamba </h3>
 
     <video width="400" height="240" controls>
       <source src="Letran Calamba.mp4" type="video/mp4">
       <source src="Letran Calamba.mp4" type="video/ogg">
+
+    <h4> Connect with us and like our page</h4>
+    <a href="https://www.facebook.com/LetranCalambaOfficial/">
+      <img src="facebook-logo-2.png" alt="Facebook.com" width="300" height="100">
+       </a>
+
     Your browser does not support the video tag.
     </video>
 
@@ -162,7 +175,7 @@ function showSlides() {
     <h2>News </h2>
     <h5> Nursing Department, July 17 ,2021 </h5>
     <img src= "Nursing.jpg" width="900" height="300" >
-    <p>Kudos to the School of Nursing for achieving a 100% passing percentage in the July 2021 Nursing Board Examination!
+    <p align= right;>Kudos to the School of Nursing for achieving a 100% passing percentage in the July 2021 Nursing Board Examination!
 
       Congratulations, to our new Letranite nurses!
       You make us proud!
@@ -195,12 +208,6 @@ function showSlides() {
     An Excellent Rating of Suppliers Evaluation certificate is also given to Phoenix Educational Systems Inc. for achieving an Excellent Rating gathered on Supplier's Evaluation for Academic Year 2015-2016 prepared by Management Accounting and Finance Services Department.</p>
 </div>
 </div>
-
-
-
-
-
-
 
 <div class="footer">
   <img src= "ISO2015.png" width="100" height="100" >
