--- a/Index.html
+++ b/Index.html
@@ -175,13 +175,13 @@ function showSlides() {
     <h2>News </h2>
     <h5> Nursing Department, July 17 ,2021 </h5>
     <img src= "Nursing.jpg" width="900" height="300" >
-    <p align= right;>Kudos to the School of Nursing for achieving a 100% passing percentage in the July 2021 Nursing Board Examination!
+    <p>Kudos to the School of Nursing for achieving a 100% passing percentage in the July 2021 Nursing Board Examination!<br>
 
-      Congratulations, to our new Letranite nurses!
-      You make us proud!
+      Congratulations, to our new Letranite nurses!<br>
+      You make us proud!<br>
       
-      #ArribaLetran
-      #LetranCalamba
+      #ArribaLetran<br>
+      #LetranCalamba<br>
       #discoveryourfuturewithletran </p>
 
      <br>
@@ -191,7 +191,7 @@ function showSlides() {
     <img src= "ncaa_2019.png" width="900" height="300" >
     <p>THE CROWN IS BACK TO THE WALLS!
       COLEGIO DE SAN JUAN DE LETRAN KNIGHTS ARE YOUR NCAA SEASON 95 MEN’S BASKETBALL CHAMPIONS!<br> 
-      They won against the fierce San Beda Red Lions with a score of 79 to 81, Kudos Red Lions for an amazing season! 
+      They won against the fierce San Beda Red Lions with a score of 79 to 81, Kudos Red Lions for an amazing season!<br> 
       What a great way to celebrate our 399th Founding Anniversary. See you next year as we host the NCAA Season 96! </p>
       <hr style="height:2px;border-width:10px;color:gray;background-color:gray">
     <br>
