--- a/CourseOffer.html
+++ b/CourseOffer.html
@@ -81,6 +81,7 @@
     <p>The Accountancy, Business and Management (ABM) strand would focus on the basic concepts of financial management, business management, corporate operations, and all things that are accounted for.<br> ABM can also lead you to careers on management and accounting which could be sales manager, human resources, marketing director, project officer, bookkeeper, accounting clerk, internal auditor, and a lot more. </p>
    
     <br>
+    <hr style="height:2px;border-width:10px;color:gray;background-color:gray">
     <h3>School of Computer Studies and Technology</h3>
     <p><a href="https://www.letran-calamba.edu.ph/files/RD/enrlment/SCST-2nd-Sem-21-22%20rev02.pdf">
       <img src="ProgramsSCST.jpeg" alt="letran-calamba.com.ph" width="1000" height="400">
@@ -88,7 +89,7 @@
     
     <h3>Program Discription</h3> 
     <p>Courses for a bachelor's in information technology degree will include information technology fundamentals, computer systems security, computer networks, IT systems planning, and scripting.Computer science degree requirements will also include general education classes in math, history, philosophy, writing, and more. </p>
-   
+   <hr style="height:2px;border-width:10px;color:gray;background-color:gray">
     <br>
     <h3>School of Engineering and Architecture</h3>
     <p><a href="https://www.letran-calamba.edu.ph/files/RD/enrlment/SEA-2nd-Sem-21-22%20rev02.pdf">
@@ -98,8 +99,11 @@
     <h3>Program Discription</h3>
     <p>Engineering is a stream of education that involves the application of Science, Technology, and Mathematics to innovate, design, develop and maintain machines, structures, software, hardware, and systems & processes. This field offers a range of career opportunities across all industries, making it one of the most sought-after courses pursued by students </p>
      <br>
+    
      <p>Architectural education provides students with knowledge and skills in planning, designing and constructing buildings taking into account the principles of utility, strength and aesthetics. Students who want to pursue a degree in Architecture are encouraged to take the Accountancy, Business and Management strand.</p>
     <br>
+
+    <hr style="height:2px;border-width:10px;color:gray;background-color:gray">
     <h3>School of Education and Science</h3>
     <p><a href="https://www.letran-calamba.edu.ph/files/RD/enrlment/seas-2nd-sem-21-22.pdf">
       <img src="ProgramsSEAS.jpeg" alt="letran-calamba.com.ph" width="1000" height="400">
@@ -109,6 +113,7 @@
     <p>The School of Education, Arts and Sciences (SEAS) provides learning opportunities related to academic disciplines of Education, Arts and Sciences. It is also in-charge of the general education curriculum of all Schools and Institutes of the Colegio. </p>
    
     <br>
+    <hr style="height:2px;border-width:10px;color:gray;background-color:gray">
     <h3>School of Nursing</h3>
     <p><a href="https://www.letran-calamba.edu.ph/files/RD/enrlment/BSN%202nd%20Sem21-22%20Jan11.pdf">
       <img src="ProgramsNursing.jpeg" alt="letran-calamba.com.ph" width="1000" height="400">
@@ -120,6 +125,7 @@
     </p>
    
     <br>
+    <hr style="height:2px;border-width:10px;color:gray;background-color:gray">
     <h3>School of Tourism and Hospitality Management</h3>
     <p><a href="https://www.letran-calamba.edu.ph/files/RD/enrlment/BSN%202nd%20Sem21-22%20Jan11.pdf">
       <img src="ProgramsSTHM.jpeg" alt="letran-calamba.com.ph" width="1000" height="400">
