--- a/Academics.html
+++ b/Academics.html
@@ -16,6 +16,10 @@
       <li><a href="Aboutus.html">About Us</a></li>
       <li><a href="CourseOffer.html">Courses Offered  </a><li>  
       </Ul>
+      <form class="search-form">
+        <input type ="text" placeholder ="Search">
+        <button class="searchbtn">search</button>
+     </form>
     </div>
     <div class="row">  
       <div class = "side">
