--- a/Index.html
+++ b/Index.html
@@ -61,6 +61,8 @@
     <div class="vitem">COVID-19 MASS VACCINE IS AVAILABLE IN LETRAN-CALAMBA </div>
   </div></div>
     <link href ="assets.css/style.css" rel ="stylesheet"/>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
 <div class="header">
 
 <div class="slideshow-container">
@@ -130,7 +132,7 @@ function showSlides() {
    <h5>LEARN.LEAD.LIVE</h5>
 </div>
 
-<div class="navbar">
+<nav class="navbar">
   <ul>
     <img src ="logoLetran.png" width="50" height="50">
   <li><a href="Index.html" >Home</a></li> 
@@ -138,10 +140,16 @@ function showSlides() {
   <li><a href="Aboutus.html">About Us</a></li>
   <li><a href="CourseOffer.html">Courses Offered  </a><li>  
   </Ul>
-</div>
+  <form class="search-form">
+    <input type ="text" placeholder ="Search">
+    <button class="searchbtn">search</button>
+ </form>
+</nav>
 
 <div class="row">
   <div class="side">
+    
+
     <h3>Department Schedule</h3>
         <h5>BED OFFICE </h5>
           <p>Monday to Friday</p>
@@ -208,7 +216,9 @@ function showSlides() {
     An Excellent Rating of Suppliers Evaluation certificate is also given to Phoenix Educational Systems Inc. for achieving an Excellent Rating gathered on Supplier's Evaluation for Academic Year 2015-2016 prepared by Management Accounting and Finance Services Department.</p>
 </div>
 </div>
-
+<button id="btnScrollToTop">
+  <i class = "material-icons">arrow_upwards</i> 
+</button>
 <div class="footer">
   <img src= "ISO2015.png" width="100" height="100" >
 <p>Colegio de San Juan de Letran Calamba
