--- a/Aboutus.html
+++ b/Aboutus.html
@@ -17,6 +17,11 @@
       <li><a href="CourseOffer.html">Courses Offered  </a><li>  
       
       </Ul>
+
+      <form class="search-form">
+        <input type ="text" placeholder ="Search">
+        <button class="searchbtn">search</button>
+     </form>
     </div>
 <div class="row">
   <div class="side">
